Final Clean up